# Bash-Compiler

./: CMakeLists.txt  LICENSE  README.md  bashcompiler-completion.bash  build.sh
.github/workflows/: build.yml
src/: bashcompiler.cpp
src/include/: bashcompiler.h
test/: test.sh  test2.sh  test3.sh
